@@ -19,7 +19,6 @@ package org.apache.solr.common.cloud;
 import static org.apache.solr.common.util.Utils.toJSONString;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.Map;
@@ -47,7 +46,7 @@ public class ZkNodeProps implements MapWriter {
   }
 
   public ZkNodeProps plus(String key, Object val) {
-    return plus(Collections.singletonMap(key, val));
+    return plus(Map.of(key, val));
   }
 
   public ZkNodeProps plus(Map<String, Object> newVals) {
